--- a/environment.yml
+++ b/environment.yml
@@ -8,6 +8,9 @@ channels:
   - defaults
 dependencies:
   - python=3.9
+  - pip=24.2
+  - openslide=3.4.1
+  - openslide-python=1.3.1
   - numpy=1.26.4
   - pandas=2.2.3
   - matplotlib=3.9.2
