--- a/environment.yml
+++ b/environment.yml
@@ -10,6 +10,7 @@ dependencies:
   - python=3.9
   - pip=24.2
   - openslide=3.4.1
+  - opencv=4.7.0
   - openslide-python=1.3.1
   - numpy=1.26.4
   - pandas=2.2.3
@@ -34,3 +35,5 @@ dependencies:
       - timm==1.0.11
       - tqdm==4.66.5
       - zenodo-client==0.3.5
+      - spams==2.6.5
+      - zenodo_get==1.6.1
